examples/good/function-as-argument.bg
(var apply [(var f) (var v)]
  (f v))

(int addOne [(int x)] (+ x 1))

(apply addOne 41)
