examples/bad/too-many-arguments.bg
(int addOne [(int x)] (+ x 1))
(addOne 1 2)
